--- a/redox.css
+++ b/redox.css
@@ -1,62 +1,67 @@
-body{
+*::before,
+*::after,
+*{
   margin: 0;
-  background: #000;
   padding: 0;
+  box-sizing: border-box;
 }
-
-.toggler{
-  height: 30px;
-  width: 30px;
-  position: relative;
-  left: 48rem;
-  top: .5rem;
+.tibet{
+  height: 85vh;
+  width: 90%;
+  margin: auto;
+  padding: 10px;
 }
 .navuy{
   color: #c2c2c2;
   font-family: 'Ubuntu', sans-serif;
 }
-.tibet{
-  height: 94vh;
-  width: 1020px;
-  position: absolute;
-  padding: 5% 2%;
-  margin: 3%;
-}
 .first_page{
-  height: 89vh;
-  width: 35rem;
-  margin-top: 25px;
-  margin-left: -15px;
+  height: 75vh;
+  border-top-left-radius: 20px;
+  width: 115%;
+  margin-left: 53px;
 }
-.row{
-  padding-right: -100px;
-}
+
 .text p{
-  margin-left: 50px;
+  margin-left: 30px;
 }
 .text h1{
-  margin-left: 50px;
-  color: #6F37D4;
   font-size: 55px;
+  margin-left: 30px;
+  background-color: #6F37D4;
+  background-image: linear-gradient(45deg, #C426EB, #3200EB);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  font-weight: 800;
 }
 .text button{
-  margin-left: 50px;
+  height: 50px;
+  width: 50%;
+  color: #fff;
+  background-color: #6F37D4;
+  border: none;
+  border-radius: 10px;
+  font-weight: 600;
+  font-size: 18px;
+  transition: .5s;
+  margin-left: 30px;
+}
+.text button:hover{
+  color: #6F37D4;
+  background-color: #fff;
+  border: 1px solid #6F37D4;
 }
 .text{
-  font-size: 15px;
-  font-weight: 700;
+  font-size: 14px;
+  font-weight: 400;
+  color: #a8a8a8;
   letter-spacing: .25mm;
-  background-color: #ef89a5;
-  padding-top: 90px;
-  line-height: 2 ;
-  text-align: left;
-}
-#home{
-  display: block;
-  position: absolute;
-}
-#cards{
-  display: block;
-  position: absolute;
-  top: 100vh;
+    line-height: 2 ;
+  width: auto;
+  height: auto;
+  padding-top: 10%;
 }
